Record the Linux activation spike and amend two ADRs
A spike proved systemd socket activation works for the AuthenticationService on
Ubuntu 26.04 with JDK 21, removing the doubt that motivated it. The mechanism is
subtle enough to be worth recording: System.inheritedChannel() inspects only file
descriptor 0 while systemd passes the listening socket as fd 3, bridged by
StandardInput=socket on a .socket unit with exactly one ListenStream. No
reflection and no --add-opens are needed.

ADR-0003's umask consequence turned out to bind on Windows only: under socket
activation systemd creates the socket, so its ownership and mode are declarative.
The same ADR now states explicitly that the two platforms share the transport and
the Session model but not the activation trigger.

The full findings are kept as a primary source under docs/spikes/ rather than
left in /tmp.